# Smart-Counter

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  ToDo.md  check-deps-installed.py  docker-compose-gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  run
dashboard/: Dockerfile  app.py
docs/: ARCHITECTURE.md  BI_DIRECTIONAL_COUNTING.md  CLI_USAGE.md  DATABASE.md  DATABASE_QUICKSTART.md  DEPLOYMENT.md  DOCKER_COMPOSE.md  DOCKER_COMPOSE_GPU.md  DRIFT_PROTECTION.md  MLOPS_REFACTOR.md  QUICKSTART.md  TECH_STACK.md
include/: database.h  detector.h  fps_counter.h  tracker.h
python/: convert.py  prototype.py  read_database.py  verify_onnx.py
python/utils/: __init__.py
scripts/: build.sh  build_and_run.sh  check_cuda.sh  deploy.sh  run.sh  setup.sh  setup_mlops.sh  test_database.sh
src/: database.cpp  detector.cpp  main.cpp  main.py  tracker.cpp
src/utils/: fps_utils.py
